tests/badarray1.err
3: error: illegal start of expression, identifier expected
	[]foo = 5;
	^
