tests/badarray1.juice
// malformed array ref

[]foo = 5;
